--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="imagen/lpxsolo.png" sizes="200x200" type="image/x-icon"  >
     <title>Diseño Web para Abogados en Valencia - Law Pixel Studio</title>
    <meta name="description" content="🔥 Diseño web especializado para abogados en Valencia. Webs que atraen clientes con SEO y estrategias de conversión. ¡30% OFF en tu proyecto!">
-
+<meta name="google-site-verification" content="XFhQKekxGVM6qDoErVnyQon-pJq4BqCyz_3W16qK90Y" />
   <meta name="robots" content="index, follow">
 <meta name="author" content="Law Pixel Studio">
 <link rel="canonical" href="https://lawpixel.github.io/valencia/">
