--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@ Atrae Más Clientes con una Marca Profesional">
     <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCG54Q6W7E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZCG54Q6W7E');
+</script>
        
 <script type="application/ld+json">
 {
