--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="imagen/logo.png" sizes="200x200" type="image/x-icon"  >
+
+<link rel="icon" href="https://lawpixel.github.io/valencia/imagen/logo.png" type="image/png">
+<link rel="apple-touch-icon" href="https://lawpixel.github.io/valencia/imagen/logo.png">
+   
     <title>Diseño Web para Abogados en Valencia - Law Pixel Studio</title>
    <meta name="description" content="🔥 Diseño web especializado para abogados en Valencia. Webs que atraen clientes con SEO y estrategias de conversión. ¡30% OFF en tu proyecto!">
 
@@ -12,8 +15,13 @@
 <link rel="canonical" href="https://lawpixel.github.io/valencia/">
  
 
+    <!-- ✅ AÑADIR: Preload para recursos críticos -->
 <link rel="preload" href="video/2v.mp4" as="video" type="video/mp4">
-
+<meta property="og:url" content="https://lawpixel.github.io/valencia/">
+<meta property="og:image" content="https://lawpixel.github.io/valencia/imagen/logo.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<!-- ✅ AÑADIR: Más meta tags -->
 <meta property="og:title" content="Diseño Web e identidad visual para Abogados Valencia">
 <meta property="og:description" content="Branding para Abogados en Valencia
 Atrae Más Clientes con una Marca Profesional">
@@ -33,7 +41,7 @@ Atrae Más Clientes con una Marca Profesional">
     
     <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    
+    <!-- Colocar correctamente en <head> -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCG54Q6W7E"></script>
 <script>
@@ -65,6 +73,21 @@ Atrae Más Clientes con una Marca Profesional">
   }]
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Law Pixel Studio",
+  "url": "https://lawpixel.github.io/valencia/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://lawpixel.github.io/valencia/#contacto{search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+
     <style>
         :root {
             --degradado: linear-gradient(135deg, #121212 0%, #0d3e75 100%);
