--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ Atrae Más Clientes con una Marca Profesional">
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#problemas">Problemas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://lawpixel.github.io/valencia/blog/">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="#sobre-nosotros">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="#proceso">Proceso</a></li>
                     <li class="nav-item"><a class="nav-link" href="#estadisticas">Resultados</a></li>
