--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="imagen/l2.png" alt="Law Pixel Studio diseño para abogados" width="100" height="100"  >
+                <img src="/lawlat_1.webp" alt="Law Pixel Studio diseño para abogados" width="100" height="100"  >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Abrir menú de navegación">
     <i class="fas fa-bars"></i>
