--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Diseño Web para Abogados en Valencia | Law Pixel Studio</title>
-    <meta name="description" content="Diseño web para abogados en Valencia con enfoque en SEO, conversión y autoridad profesional. Solicita tu consulta gratuita.">
+    <meta name="description" content="Creamos páginas web legales y optimizadas para abogados en Valencia. Aumenta clientes y cumple con la ley. Solicita tu demo gratis.">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Law Pixel Studio">
     <link rel="canonical" href="https://lawpixel.github.io/valencia/">
@@ -1397,3 +1397,4 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
 </script>
 </body>
 </html>
+
