--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://lawpixel.github.io/valencia/">
 
     <link rel="icon" href="https://lawpixel.github.io/valencia/imagen/logo.png" type="image/png">
-    <link rel="apple-touch-icon" href="https://lawpixel.github.io/valencia/imagen/logo.png">
+    <link rel="apple-touch-icon" href="https://lawpixel.github.io/imagen/law-lateral.webp">
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
@@ -109,6 +109,21 @@
         }
       }]
        {
+        "@type": "Question",
+    "name": "¿Por qué un abogado necesita una web optimizada en Valencia?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Porque una web optimizada permite captar clientes locales, aparecer en Google Maps y transmitir confianza cumpliendo con la normativa legal."
+    }
+  },{
+    "@type": "Question",
+    "name": "¿Incluyen SEO local en el diseño web?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Sí, integramos posicionamiento SEO local para que tu despacho destaque en las búsquedas de Valencia y alrededores."
+    }
+  }]
+        { 
         "@type": "Question",
         "name": " ¿Qué incluye exactamente su servicio de diseño web para abogados y cómo me ayudará a conseguir más clientes?",
         "acceptedAnswer": {
@@ -1397,4 +1412,5 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
 </script>
 </body>
 </html>
+
 
