--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Law Pixel Studio">
     <link rel="canonical" href="https://lawpixel.github.io/valencia/">
 
-    <link rel="icon" href="https://lawpixel.github.io/valencia/imagen/logo.png" type="image/png">
+    <link rel="icon" href="https://lawpixel.github.io/imagen/law-lateral.webp" type="image/webp">
     <link rel="apple-touch-icon" href="https://lawpixel.github.io/imagen/law-lateral.webp">
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
@@ -34,14 +34,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Diseño Web para Abogados en Valencia - Law Pixel Studio">
     <meta property="og:description" content="Diseño web para abogados en Valencia con enfoque en SEO, conversión y autoridad profesional. Solicita tu consulta gratuita.">
-    <meta property="og:image" content="https://lawpixel.github.io/valencia/imagen/logo.png">
+    <meta property="og:image" content="https://lawpixel.github.io/imagen/law-lateral.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Diseño Web para Abogados en Valencia - Law Pixel Studio">
     <meta name="twitter:description" content="Diseño web para abogados en Valencia con enfoque en SEO, conversión y autoridad profesional. Solicita tu consulta gratuita.">
-    <meta name="twitter:image" content="https://lawpixel.github.io/valencia/imagen/logo.png">
+    <meta name="twitter:image" content="https://lawpixel.github.io/imagen/law-lateral.webp">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCG54Q6W7E"></script>
     <script>
@@ -509,7 +509,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/lawlat_1.webp" alt="Law Pixel Studio diseño para abogados" width="100" height="100"  >
+                <img src="https://lawpixel.github.io/imagen/law-lateral.webp" alt="Law Pixel Studio diseño para abogados" width="100" height="100"  >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Abrir menú de navegación">
     <i class="fas fa-bars"></i>
@@ -1412,5 +1412,6 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
 </script>
 </body>
 </html>
+
 
 
