--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Law Pixel Studio">
     <link rel="canonical" href="https://lawpixel.github.io/valencia/">
-
+<link rel="icon" href="/imagen/favicon.webp" type="image/webp">
+    <link rel="icon" href="../imagen/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../imagen/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../imagen/favicon-16x16.png" type="image/png" sizes="16x16">
     <link rel="icon" href="https://lawpixel.github.io/imagen/law-lateral.webp" type="image/webp">
-    <link rel="apple-touch-icon" href="https://lawpixel.github.io/imagen/law-lateral.webp">
+    <link rel="apple-touch-icon" href="https://lawpixel.github.io/imagen/logo.webp">
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
@@ -509,7 +512,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://lawpixel.github.io/imagen/law-lateral.webp" alt="Law Pixel Studio diseño para abogados" width="100" height="100"  >
+                <img src="https://lawpixel.github.io/imagen/logo.webp" alt="Law Pixel Studio diseño para abogados"   >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Abrir menú de navegación">
     <i class="fas fa-bars"></i>
@@ -1412,6 +1415,7 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
 </script>
 </body>
 </html>
+
 
 
 
