--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://lawpixel.github.io">
                 <img src="https://lawpixel.github.io/imagen/logo.webp" alt="Law Pixel Studio diseño para abogados"   >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Abrir menú de navegación">
@@ -1415,6 +1415,7 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
 </script>
 </body>
 </html>
+
 
 
 
